integrate s3 tables